objects/bofc__BOFCAuditHistoryItem__c.object
<CustomObject>
    <fields>
        <fullName>bofc__Action_Status__c</fullName>
        <label>Action Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__BOFCAuditHistory__c</fullName>
        <label>BOFCAuditHistory</label>
        <referenceTo>bofc__BOFCAuditHistory__c</referenceTo>
        <relationshipLabel>BOFCAuditHistoryItems</relationshipLabel>
        <relationshipName>BOFCAuditHistoryItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bofc__Item_Name__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BOFCAuditHistoryItem</label>
    <nameField>
        <displayFormat>BAHI-{0000}</displayFormat>
        <label>BOFCAuditHistoryItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOFCAuditHistoryItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>